# gen-ai-sample-app

./: .env.sample  Dockerfile  README.md  compose.local.yaml  compose.yaml  pyproject.toml
.streamlit/: config.toml
sample_ai_chat/: __init__.py  env.py  run_streamlit.py
sample_ai_chat/applications/: app_chat_process.py  app_get_llm.py
sample_ai_chat/chains/: get_chat_chain.py
sample_ai_chat/types/: types.py
